# shadow-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.yml  shadow-rs.spec
.cargo/: config.toml
.github/workflows/: ci.yml
debian/: control  rules
docker/: Dockerfile.alpine  Dockerfile.debian  Dockerfile.e2e  Dockerfile.fedora
docs/: CLEAN-ROOM-AUDIT-2026-05-04.md  OPENBSD-REFERENCE.md  SECURITY-HARDENING.md
src/shadow-core/: Cargo.toml
src/shadow-core/src/: atomic.rs  audit.rs  cli.rs  crypt.rs  error.rs  group.rs  gshadow.rs  hardening.rs  lib.rs  lock.rs  login_defs.rs  nscd.rs  os_error.rs  pam.rs  passwd.rs  process.rs  selinux.rs  shadow.rs  skel.rs  subid.rs  sysroot.rs  uid_alloc.rs  validate.rs
src/uu/chage/: Cargo.toml
src/uu/chage/src/: chage.rs  main.rs
src/uu/chfn/: Cargo.toml
src/uu/chfn/src/: chfn.rs
src/uu/chpasswd/: Cargo.toml
src/uu/chpasswd/src/: chpasswd.rs  main.rs
src/uu/chsh/: Cargo.toml
src/uu/chsh/src/: chsh.rs
src/uu/groupadd/: Cargo.toml
src/uu/groupadd/src/: groupadd.rs
src/uu/groupdel/: Cargo.toml
src/uu/groupdel/src/: groupdel.rs
src/uu/groupmod/: Cargo.toml
src/uu/groupmod/src/: groupmod.rs
src/uu/grpck/: Cargo.toml
src/uu/grpck/src/: grpck.rs
src/uu/newgrp/: Cargo.toml
src/uu/newgrp/src/: newgrp.rs
src/uu/passwd/: Cargo.toml
src/uu/passwd/src/: main.rs  passwd.rs
src/uu/pwck/: Cargo.toml
src/uu/pwck/src/: pwck.rs
src/uu/useradd/: Cargo.toml
src/uu/useradd/src/: main.rs  useradd.rs
src/uu/userdel/: Cargo.toml
src/uu/userdel/src/: main.rs  userdel.rs
src/uu/usermod/: Cargo.toml
src/uu/usermod/src/: main.rs  usermod.rs
tests/: gnu-compat.sh  pam-e2e.sh
tests/by-util/: test_groupadd.rs  test_groupdel.rs  test_groupmod.rs  test_grpck.rs  test_passwd.rs  test_pwck.rs  test_useradd.rs  test_userdel.rs  test_usermod.rs
tests/common/: mod.rs
tests/e2e/: ansible-test.yml  deploy-test.sh
util/: generate-completions.sh
