[package]
name = "shadow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for shadow-rs: parsers, atomic file ops, locking, PAM integration"

[lib]
path = "src/lib.rs"

[dependencies]
libc = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
pam = []
selinux = []
shadow = []
group = []
gshadow = []
login-defs = []
subid = []

[lints]
workspace = true
