[package]
name = "shadow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "shadow-core ~ (shadow-rs) parsers, atomic file ops, locking, PAM"

[lib]
path = "src/lib.rs"

[dependencies]
libc = { workspace = true }
nix = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
landlock = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
crypt = []
pam = []
selinux = []
shadow = []
group = []
gshadow = []
login-defs = []
subid = []
landlock = ["dep:landlock"]

[lints]
workspace = true
