[package]
name = "uu_chfn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "chfn command (shadow-rs)"

[lib]
path = "src/chfn.rs"

[[bin]]
name = "chfn"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
nix = { workspace = true }
shadow-core = { workspace = true }
uucore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
