[package]
name = "uu_chfn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "chfn ~ (shadow-rs) change user finger information"

[lib]
path = "src/chfn.rs"

[[bin]]
name = "chfn"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rustix = { workspace = true }
shadow-core = { workspace = true }
uucore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
