[package]
name = "uu_chpasswd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "chpasswd command (shadow-rs)"

[lib]
path = "src/chpasswd.rs"

[[bin]]
name = "chpasswd"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
shadow-core = { workspace = true, features = ["shadow"] }
uucore = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
