[package]
name = "uu_chpasswd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "chpasswd ~ (shadow-rs) update passwords in batch"

[lib]
path = "src/chpasswd.rs"

[[bin]]
name = "chpasswd"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
nix = { workspace = true }
shadow-core = { workspace = true, features = ["shadow"] }
uucore = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
