[package]
name = "uu_groupadd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "groupadd ~ (shadow-rs) create a new group"

[lib]
path = "src/groupadd.rs"

[[bin]]
name = "groupadd"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rustix = { workspace = true }
shadow-core = { workspace = true, features = ["shadow", "group", "gshadow", "login-defs"] }
uucore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
