[package]
name = "uu_groupdel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "groupdel command (shadow-rs)"

[lib]
path = "src/groupdel.rs"

[[bin]]
name = "groupdel"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
nix = { workspace = true }
shadow-core = { workspace = true, features = ["shadow", "group", "gshadow", "login-defs"] }
uucore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
