[package]
name = "uu_grpck"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "grpck ~ (shadow-rs) verify integrity of group files"

[lib]
path = "src/grpck.rs"

[[bin]]
name = "grpck"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
shadow-core = { workspace = true, features = ["shadow", "group", "gshadow", "login-defs"] }
uucore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
