[package]
name = "uu_passwd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "passwd ~ (shadow-rs) change user password"

[lib]
path = "src/passwd.rs"

[[bin]]
name = "passwd"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rustix = { workspace = true }
shadow-core = { workspace = true, features = ["shadow", "login-defs", "landlock"] }
uucore = { workspace = true }

[features]
default = []
pam = ["shadow-core/pam"]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
