[package]
name = "uu_pwck"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "pwck ~ (shadow-rs) verify integrity of password files"

[lib]
path = "src/pwck.rs"

[[bin]]
name = "pwck"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
shadow-core = { workspace = true, features = ["shadow", "group", "login-defs"] }
uucore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
