[package]
name = "uu_userdel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "userdel ~ (shadow-rs) delete a user account"

[lib]
path = "src/userdel.rs"

[[bin]]
name = "userdel"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rustix = { workspace = true }
shadow-core = { workspace = true, features = ["shadow", "group", "gshadow", "login-defs", "subid"] }
uucore = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
